// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartTime /> #render() still matches snapshot 1`] = `
<ForEachEventVariant
  renderDefault={[Function]}
  renderLabel={[Function]}
  variant={null}
/>
`;

exports[`<StartTime /> #renderDefault() still matches snapshot 1`] = `
<Memo(Connect(WithSimplifyResaga(Time)))
  editablePlaceholder={
    <FormattedMessage
      defaultMessage="Click to specify starting time"
      id="app.Event.parts.Activity.StartTime.editablePlaceholder"
    />
  }
  hasLabelPrefix={true}
  variant={null}
/>
`;

exports[`<StartTime /> #renderLabel() still matches snapshot 1`] = `
<Memo(Connect(WithSimplifyResaga(Time)))
  hasLabelPrefix={true}
  renderPrefix={[Function]}
  variant={null}
/>
`;

exports[`<StartTime /> #renderLabelPrefix() still matches snapshot 1`] = `
<FormattedMessage
  defaultMessage="Starting:"
  id="app.Event.parts.Activity.StartTime.labelPrefix"
/>
`;
